# arena-benchmark

./: .gitignore  CMakeLists.txt  LICENSE  README-CH.md  README.md  build.sh
examples/: CMakeLists.txt  basic_example.cpp  test_benchmark_summary.cpp  test_highlight_best.cpp  test_repetition_log_list.cpp  test_result_exporter.cpp  test_trimmed_average.cpp
include/arena_benchmark/: arena_benchmark.hpp  arena_reporter.hpp  benchmark_results.hpp  instance_registration.hpp  repetition_log_list.hpp  repetition_log_list_visualizer.hpp  result_exporter.hpp  summary_table.hpp  summary_table_visualizer.hpp  table_meta.hpp
